@@ -1,3 +1,5 @@
+Oct 13, 2024: libarchive 3.7.7 released
+
 Sep 23, 2024: libarchive 3.7.6 released
 
 Sep 13, 2024: libarchive 3.7.5 released
